Fix UI bug for manual control open with set profile

--- a/OnLand/ControlLaptop/templates/_cards/inverter_values.html
+++ b/OnLand/ControlLaptop/templates/_cards/inverter_values.html
@@ -1,6 +1,6 @@
 <div class="card ">
     <div class="header">
-        <h4 class="title">Inverter Overview</h4>
+        <h4 class="title">Inverter Overview</h4> Connected : <span id="inverterHeartbeat" class="telemetry-value boolean"></span>
     </div>
     <div class="content">
         <table class="table table-hover table-striped table-condensed inverter-table">
