--- a/OnLand/ControlLaptop/templates/_forms/setFlightProfile.html
+++ b/OnLand/ControlLaptop/templates/_forms/setFlightProfile.html
@@ -22,7 +22,7 @@
                        </div>
                    </div>
                    <div class="row text-center">
-                       <input type="submit" value="ARM"/>
+                       <input type="submit" value="SEND"/>
                    </div>
                </div>
           </form>
