Overrides completed and tested

--- a/OnLand/ControlLaptop/templates/_cards/commands.html
+++ b/OnLand/ControlLaptop/templates/_cards/commands.html
@@ -24,7 +24,7 @@
                     <button class="btn btn-primary btn-command" type="button" data-toggle="collapse" data-target="#flightProfileCollapse" aria-expanded="false" aria-controls="flightProfileCollapse"> SET PROFILE </button>
                 </div>
                <div class="row text-center">
-                    <button class="btn btn-primary btn-command"> OVERRIDES </button>
+                    <button class="btn btn-info btn-command" type="button" data-toggle="collapse" data-target="#overridesCollapse" aria-expanded="false" aria-controls="manualControlsCollapse"> OVERRIDES </button>
                 </div>
                 <div class="row text-center">
                     <button class="btn btn-info btn-command" type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="manualControlsCollapse"> MANUAL CONTROL </button>
