--- a/OnLand/ControlLaptop/templates/dashboard.html
+++ b/OnLand/ControlLaptop/templates/dashboard.html
@@ -18,8 +18,11 @@
        </div>
         {% include '_cards/connectionCards.html' %}
     </div>
+
     {% include '_cards/manual_state.html' %}
     {% include '_forms/setFlightProfile.html' %}
+    {% include '_forms/setOverrides.html' %}
+
     <div class="row">
        <div class="col-md-6">
            {% include '_cards/inverter_values.html' %}
