--- a/OnLand/ControlLaptop/templates/_forms/setFlightProfile.html
+++ b/OnLand/ControlLaptop/templates/_forms/setFlightProfile.html
@@ -4,7 +4,7 @@
           <h4 class="title">Set Profile</h4>
        </div>
        <div class="content">
-          <form>
+          <form id="flight-profile-form">
                <div class="form-group">
                    {{ armForm.csrf_token }}
                    <div class="row">
@@ -40,12 +40,12 @@
 
 <script>
     $(document).ready(function() {
-        $('form').submit(function (e) {
+        $('#flight-profile-form').submit(function (e) {
             var url = "{{ url_for('parse_flight_profile_command') }}"; // send the form data here.
             $.ajax({
                 type: "POST",
                 url: url,
-                data: $('form').serialize(), // serializes the form's elements.
+                data: $('#flight-profile-form').serialize(), // serializes the form's elements.
                 success: function (response) {
                     let status = response['status']
                     if(status === 'success'){
