--- a/OnLand/ControlLaptop/templates/_forms/setOverrides.html
+++ b/OnLand/ControlLaptop/templates/_forms/setOverrides.html
@@ -53,6 +53,10 @@
                             {{ overridesForm.enclosure_node_heartbeat.label }}
                             {{ overridesForm.enclosure_node_heartbeat(class_="form") }}
                             <br>
+                            <br>
+                            {{ overridesForm.node_states.label }}
+                            {{ overridesForm.node_states(class_="form") }}
+                            <br>
                        </div>
                    </div>
                    <div class="row text-center">
