Transition overrides tested. New update function added

--- a/OnLand/ControlLaptop/templates/_forms/setOverrides.html
+++ b/OnLand/ControlLaptop/templates/_forms/setOverrides.html
@@ -18,6 +18,10 @@
                             {{ overridesForm.lp_3.label }}
                             {{ overridesForm.lp_3(class_="form") }}
                            <br>
+                           <br>
+                            {{ overridesForm.lp_4.label }}
+                            {{ overridesForm.lp_4(class_="form") }}
+                           <br>
                             {{ overridesForm.hp.label }}
                             {{ overridesForm.hp(class_="form") }}
                            <br>
@@ -49,6 +53,10 @@
                             <br>
                             {{ overridesForm.lvdc_node_heartbeat.label }}
                             {{ overridesForm.lvdc_node_heartbeat(class_="form") }}
+                            <br>
+                            {{ overridesForm.navigation_heartbeat.label }}
+                            {{ overridesForm.navigation_heartbeat(class_="form") }}
+                            <br>
                             <br>
                             {{ overridesForm.enclosure_node_heartbeat.label }}
                             {{ overridesForm.enclosure_node_heartbeat(class_="form") }}
