--- a/OnLand/ControlLaptop/templates/_forms/setFlightProfile.html
+++ b/OnLand/ControlLaptop/templates/_forms/setFlightProfile.html
@@ -8,17 +8,46 @@
                <div class="form-group">
                    {{ armForm.csrf_token }}
                    <div class="row">
-                       <div class="col-md-4">
-                            {{ armForm.flight_distance.label }}<br>
-                            {{ armForm.flight_distance(class_="form-control") }}
+                       <div class="col-md-6">
+                           <div class="row">
+                                <div class="col-md-12">
+                                    {{ armForm.flight_distance.label }}<br>
+                                    {{ armForm.flight_distance(class_="form-control") }}
+                                </div>
+                           </div>
+                           <div class="row">
+                                <div class="col-md-12">
+                                    {{ armForm.max_flight_time.label }}<br>
+                                    {{ armForm.max_flight_time(class_="form-control") }}
+                                </div>
+                           </div>
+                           <div class="row">
+                                <div class="col-md-12">
+                                    {{ armForm.taxi.label }}<br>
+                                    {{ armForm.taxi(class_="form-control") }}
+                                </div>
+                           </div>
                        </div>
-                       <div class="col-md-4">
-                            {{ armForm.max_flight_time.label }}<br>
-                            {{ armForm.max_flight_time(class_="form-control") }}
+                       <div class="col-md-6">
+                           <div class="row">
+                                <div class="col-md-12">
+                                    {{ armForm.motor_speed.label }}<br>
+                                    {{ armForm.motor_speed(class_="form-control") }}
+                                </div>
+                           </div>
+                           <div class="row">
+                                <div class="col-md-12">
+                                    {{ armForm.start_speed.label }}<br>
+                                    {{ armForm.start_speed(class_="form-control") }}
+                                </div>
+                           </div>
+                           <div class="row">
+                                <div class="col-md-12">
+                                    {{ armForm.acceleration_time.label }}<br>
+                                    {{ armForm.acceleration_time(class_="form-control") }}
+                                </div>
+                           </div>
                        </div>
-                       <div class="col-md-4">
-                            {{ armForm.motor_speed.label }}<br>
-                            {{ armForm.motor_speed(class_="form-control") }}
                        </div>
                    </div>
                    <div class="row text-center">
