All node connections working minus ghosttrain

--- a/OnLand/ControlLaptop/templates/_cards/navigation.html
+++ b/OnLand/ControlLaptop/templates/_cards/navigation.html
@@ -13,43 +13,21 @@
   <tbody>
     <tr>
       <th scope="row"></th>
-      <td><b>Tach</b></td>
-      <td><span  class="telemetry-value" id="tachRpm"> - </span>rot/m</td>
-      <td><span class="telemetry-value" id="tachDistance"> - </span>m</td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td><b>IR</b></td>
-      <td><span class="telemetry-value" id="irRpm"> - </span>rot/m</td>
-      <td><span class="telemetry-value" id="irDistance"> - </span>m</td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td><b>Motor</b></td>
-      <td><span class="telemetry-value" id="motorSpeed"> - </span>rot/m</td>
-      <td><span class="telemetry-value" id="motorDistance"> - </span>m</td>
-    </tr>
-  </tbody>
-
-
-
-{#  <tbody>
-    <tr>
-      <th scope="row"></th>
-      <td><b>Distance</b></td>
-      <td><span id="podPosition">-</span>m</td>
+      <td><b>Position</b></td>
+      <td><span  class="telemetry-value" id="podPosition"> - </span>m</td>
     </tr>
     <tr>
       <th scope="row"></th>
       <td><b>Velocity</b></td>
-      <td><span id="podVelocity">-</span>m/s</td>
+      <td><span class="telemetry-value" id="podVelocity"> - </span>m/s</td>
     </tr>
     <tr>
       <th scope="row"></th>
-      <td><b>Acceleration</b></td>
-      <td><span id="podAccelerationX">-</span>m/s/s</td>
+      <td><b>Motor</b></td>
+      <td><span class="telemetry-value" id="motorSpeed"> - </span>rpm</td>
     </tr>
-  </tbody>#}
+  </tbody>
+
 </table>
       <div class="footer">
          <hr>
