--- a/OnLand/ControlLaptop/templates/dashboard.html
+++ b/OnLand/ControlLaptop/templates/dashboard.html
@@ -31,7 +31,8 @@
            {% include '_cards/inverter_values.html' %}
        </div>
        <div class="col-md-3">
-               {% include '_cards/bms_values.html' %}
+           {% include '_cards/HV_values.html' %}
+           {% include '_cards/LV_values.html' %}
        </div>
        <div class="col-md-2">
           {% include '_cards/events.html' %}
