--- a/OnLand/ControlLaptop/templates/dashboard.html
+++ b/OnLand/ControlLaptop/templates/dashboard.html
@@ -29,6 +29,7 @@
        </div>
        <div class="col-lg-3">
            {% include '_cards/inverter_values.html' %}
+           {% include '_cards/thread_monitor.html' %}
        </div>
        <div class="col-md-3">
            {% include '_cards/HV_values.html' %}
