--- a/OnLand/ControlLaptop/templates/_cards/inverter_values.html
+++ b/OnLand/ControlLaptop/templates/_cards/inverter_values.html
@@ -17,7 +17,7 @@
                 <tr class="d-flex sensor-row">
                     <th class="text-center col-5" scope="row">{{ value['name_pretty'] }}</th>
                     <td id="{{key}}-min" class="col-2"></td>
-                    <td id="{{ key }}" class="col-3 telemetry-value"></td>
+                    <td id="{{ key }}" class="col-3 max-min-value telemetry-value"></td>
                     <td id="{{key}}-max" class="col-2"></td>
                 </tr>
             {% endfor %}
