--- a/OnLand/ControlLaptop/templates/_cards/flightProfile.html
+++ b/OnLand/ControlLaptop/templates/_cards/flightProfile.html
@@ -1,39 +1,42 @@
 <div class="card card-top">
    <div class="header">
       <h4 class="title">Flight Profile</h4>
-      <p class="category">How she goes</p>
    </div>
    <div class="content row0">
-<table class="table" id="flight-profile-values">
-  <thead>
-    <tr>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th scope="row"></th>
-      <td><b>Motor Torque</b></td>
-      <td><span id="motorTorque" class="telemetry-value">-</span></td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td><b>Flight Distance</b></td>
-      <td><span id="flightDistance" class="telemetry-value">-</span>m</td>
-    </tr>
-    <tr>
-      <th scope="row"></th>
-      <td><b>Max Flight Time</b></td>
-      <td><span id="maxFlightTime" class="telemetry-value">-</span>s</td>
-    </tr>
-  </tbody>
-</table>
-      <div class="footer">
-         <hr>
-         <div class="stats">
-            <i id="status0" class="fa fa-check text-success"></i>
-             <span id="status1" >Double check</span>
-         </div>
-      </div>
+        <table class="table" id="flight-profile-values">
+          <tbody>
+               <tr>
+                  <th scope="row"></th>
+                  <td><b>Start Torque</b></td>
+                  <td><span id="startTorque" class="telemetry-value">-</span> N/m</td>
+               </tr>
+               <tr>
+                  <th scope="row"></th>
+                  <td><b>Motor Torque</b></td>
+                  <td><span id="motorTorque" class="telemetry-value">-</span> N/m</td>
+               </tr>
+               <tr>
+                  <th scope="row"></th>
+                  <td><b>Acceleration Time</b></td>
+                  <td><span id="accelerationTime" class="telemetry-value">-</span> s</td>
+               </tr>
+               <tr>
+                  <th scope="row"></th>
+                  <td><b>Flight Distance</b></td>
+                  <td><span id="flightDistance" class="telemetry-value">-</span> m</td>
+               </tr>
+               <tr>
+                  <th scope="row"></th>
+                  <td><b>Max Flight Time</b></td>
+                  <td><span id="maxFlightTime" class="telemetry-value">-</span> s</td>
+               </tr>
+               <tr>
+                  <th scope="row"></th>
+                  <td><b>Taxi</b></td>
+                  <td><span id="taxi" class="telemetry-value boolean">-</span></td>
+               </tr>
+          </tbody>
+        </table>
    </div>
 </div>
 
