tube pressure done frontend<-->pod

--- a/OnLand/ControlLaptop/templates/_cards/flightProfile.html
+++ b/OnLand/ControlLaptop/templates/_cards/flightProfile.html
@@ -32,8 +32,8 @@
                </tr>
                <tr>
                   <th scope="row"></th>
-                  <td><b>Taxi</b></td>
-                  <td><span id="taxi" class="telemetry-value boolean">-</span></td>
+                  <td><b>Pressure</b></td>
+                  <td><span id="expectedTubePressure" class="telemetry-value">-</span></td>
                </tr>
           </tbody>
         </table>
