additional flight config values

--- a/OnLand/ControlLaptop/templates/_cards/flightProfile.html
+++ b/OnLand/ControlLaptop/templates/_cards/flightProfile.html
@@ -1,4 +1,4 @@
-<div class="card card-top">
+<div class="card card-top" style="overflow:scroll">
    <div class="header">
       <h4 class="title">Flight Profile</h4>
    </div>
@@ -24,6 +24,16 @@
                   <th scope="row"></th>
                   <td><b>Flight Distance</b></td>
                   <td><span id="flightDistance" class="telemetry-value">-</span> m</td>
+               </tr>
+               <tr>
+                  <th scope="row"></th>
+                  <td><b>Braking Distance</b></td>
+                  <td><span id="brakingDistance" class="telemetry-value">-</span> m</td>
+               </tr>
+               <tr>
+                  <th scope="row"></th>
+                  <td><b>Max Velocity</b></td>
+                  <td><span id="maxVelocity" class="telemetry-value">-</span> m</td>
                </tr>
                <tr>
                   <th scope="row"></th>
