--- a/OnLand/ControlLaptop/templates/_cards/flightProfile.html
+++ b/OnLand/ControlLaptop/templates/_cards/flightProfile.html
@@ -17,7 +17,7 @@
                </tr>
                <tr>
                   <th scope="row"></th>
-                  <td><b>Acceleration Time</b></td>
+                  <td><b>Ramp Time</b></td>
                   <td><span id="accelerationTime" class="telemetry-value">-</span> s</td>
                </tr>
                <tr>
@@ -32,8 +32,13 @@
                </tr>
                <tr>
                   <th scope="row"></th>
+                  <td><b>Maximum Strip Count</b></td>
+                  <td><span id="maxStripCount" class="telemetry-value">-</span> strips</td>
+               </tr>
+               <tr>
+                  <th scope="row"></th>
                   <td><b>Max Velocity</b></td>
-                  <td><span id="maxVelocity" class="telemetry-value">-</span> m</td>
+                  <td><span id="maxVelocity" class="telemetry-value">-</span> m/s</td>
                </tr>
                <tr>
                   <th scope="row"></th>
