--- a/OnLand/ControlLaptop/templates/_cards/inverter_values.html
+++ b/OnLand/ControlLaptop/templates/_cards/inverter_values.html
@@ -1,4 +1,4 @@
-<div class="card ">
+<div class="card " style="height:53%;">
     <div class="header">
         <h4 class="title">Inverter Overview</h4> Connected : <span id="inverterHeartbeat" class="telemetry-value boolean"></span>
     </div>
