--- a/OnLand/ControlLaptop/templates/_cards/sensor_values.html
+++ b/OnLand/ControlLaptop/templates/_cards/sensor_values.html
@@ -1,4 +1,4 @@
-<div class="card ">
+<div class="card " style="height:53%;">
     <div class="header">
         <h4 class="title">Sensor Overview</h4>
     </div>
