--- a/OnLand/ControlLaptop/templates/_cards/navigation.html
+++ b/OnLand/ControlLaptop/templates/_cards/navigation.html
@@ -21,6 +21,11 @@
               <td><b>Motor</b></td>
               <td><span class="telemetry-value" id="motorSpeed"> - </span> rpm</td>
             </tr>
+            <tr>
+              <th scope="row"></th>
+              <td><b>Strips</b></td>
+              <td><span class="telemetry-value" id="totalStripCount"> - </span> strips</td>
+            </tr>
           </tbody>
 
         </table>
