--- a/OnLand/ControlLaptop/templates/_cards/states.html
+++ b/OnLand/ControlLaptop/templates/_cards/states.html
@@ -21,6 +21,11 @@
               <td><b>LVDC Node</b></td>
               <td><span id="lvdcNodeState" class="telemetry-value">--</span></td>
             </tr>
+          <tr>
+              <th scope="row"></th>
+              <td><b>Navigation Node</b></td>
+              <td><span id="navNodeState" class="telemetry-value">--</span></td>
+            </tr>
           </tbody>
         </table>
    </div>
