--- a/OnLand/ControlLaptop/templates/battery.html
+++ b/OnLand/ControlLaptop/templates/battery.html
@@ -1,23 +1,55 @@
 {% extends "base.html" %}
 
 {% block content %}
+<!--  (0 - 191) cells -->
+<!-- above 175 danger -->
+<div class="row">
+    {% include '_cards/connectionCards.html' %}
+</div>
 
-<div class="row">
-    {% include '_cards/archived/battery_header.html' %}
+<div class="card col-md-5" style="margin: 15px;">
+    <div class="content row">
+    {% for i in range(0, 3) %}
+        <div class="col-md-4">
+                <table class="table table-hover table-striped">
+                    <thead><tr>
+                        <th>Cell #</th>
+                        <th>Voltage</th>
+                    </tr>   
+                    {% for j in range(32*i, 32*(i+1)) %}
+                        <tr class={{j}}>
+                            <td>{{j}}</td>
+                            <td id={{j}}></td>
+                        </tr>
+                    {% endfor %}
+                    </thead>
+                </table>
+            </div>
+    {% endfor %}
+    </div>
 </div>
-<div class="row">
-    <div class="col-md-3">
-        {% include '_cards/archived/cells1.html' %}
-    </div>
-    <div class="col-md-3">
-        {% include '_cards/archived/cells2.html' %}
-    </div>
-    <div class="col-md-3">
-        {% include '_cards/archived/cells3.html' %}
-    </div>
-    <div class="col-md-3">
-        {% include '_cards/archived/cells4.html' %}
+<div class="card col-md-5" style="margin: 15px;">
+    <div class="content row">
+    {% for i in range(3, 6) %}
+        <div class="col-md-4">
+                <table class="table table-hover table-striped">
+                    <thead><tr>
+                        <th>Cell #</th>
+                        <th>Voltage</th>
+                    </tr>
+                    {% for j in range(32*i, 32*(i+1)) %}
+                        <tr class={{j}}>
+                            <td>{{j}}</td>
+                            <td id={{j}}></td>
+                        </tr>
+                    {% endfor %}
+                    </thead>
+                </table>
+            </div>
+    {% endfor %}
     </div>
 </div>
+
+<script src="{{ url_for('static', filename='assets/js/battery.js') }}"></script>
 
 {% endblock %}
