--- a/OnLand/ControlLaptop/static/assets/css/Base.css
+++ b/OnLand/ControlLaptop/static/assets/css/Base.css
@@ -14,6 +14,7 @@
 
 .card{
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.4) !important;
+  height: auto !important;
 }
 
 .card-top{
@@ -96,3 +97,17 @@
   color:var(--lightRed);
 }
 
+.container-fluid {
+  padding: 0;
+}
+
+.card .content .row *{
+  padding: 0;
+}
+.card .content .row .btn {
+  padding: 5px;
+}
+
+.wrapper {
+  width: 100% !important;
+}
